added class names

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     
-    <header>
+    <header class="header">
         <div class="name-site">
             Трекер навыков
         </div>
     </header>
 
 
-    <main>
+    <main class="main">
         <div class="description">Трекер навыков - это сайт, который поможет отслеживать количество часов, 
             потраченных на ваши навыки, дела, хобби и прочие действия. </div>
         
