--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <header class="header">
         <div class="name-site">
-            Трекер навыков
+            Skill time tracker
         </div>
     </header>
 
