--- a/skills-page.html
+++ b/skills-page.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="name-site">
-            Трекер навыков
+            Skill time tracker
         </div>
 
         <div class="container">
