--- a/skills-page.html
+++ b/skills-page.html
@@ -20,7 +20,7 @@
             <nav class="nav">
                 <ul class="menu">
                     <li class="menu-item">
-                        <a href="#" class="menu-link">Главная</a>
+                        <a href="index.html" class="menu-link">Главная</a>
                     </li>
                     <li class="menu-item">
                         <a href="#" class="menu-link">Аккаунт</a>
