added new class "list-s"

--- a/skills-page.html
+++ b/skills-page.html
@@ -47,11 +47,16 @@
             <div class="container">
                 <button class="btn-edit">Редактировать</button>
 
+                <div class="list-s">
                 <div class="list-skills">
                     Список навыков
                 </div>
-                <div class="list-skills-time">
+                    <div class="list-skills">
                     Затраченное время
+                </div>
+                    <div class="list-skills">
+                        Мини статистика
+                    </div>
                 </div>
 
             </div>
