added 2 input fields

--- a/skills-page.html
+++ b/skills-page.html
@@ -48,15 +48,20 @@
                 <button class="btn-edit">Редактировать</button>
 
                 <div class="list-s">
-                <div class="list-skills">
-                    Список навыков
-                </div>
                     <div class="list-skills">
-                    Затраченное время
-                </div>
+                        Список навыков
+                    </div>
+                    <div class="list-skills">
+                        Затраченное время
+                    </div>
                     <div class="list-skills">
                         Мини статистика
                     </div>
+                </div>
+
+                <div class="input-skill">
+                    <input class="input-skill-name" type="text" placeholder="Название навыка">
+                    <input class="input-skill-hour" type="text" placeholder="Количество имеющихся часов">
                 </div>
 
             </div>
