--- a/skills-page.html
+++ b/skills-page.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <title>Трекер навыков</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css"> 
+
 </head>
 <body>
     <header class="header">
@@ -60,9 +67,14 @@
                 </div>
 
                 <div class="input-skill">
-                    <input class="input-skill-name" type="text" placeholder="Название навыка">
-                    <input class="input-skill-hour" type="text" placeholder="Количество имеющихся часов">
+                    <input class="input-skill-name" id="input-skill" type="text" placeholder="Название навыка">
+                    <input class="input-skill-hour" id="input-hours" type="text" placeholder="Количество имеющихся часов">
+                    <button class="btn-add-skill" id="btn-add">Добавить навык</button>
                 </div>
+
+                <ul class="list-group" id="list">
+
+                </ul>
 
             </div>
 
@@ -71,6 +83,6 @@
         </div>
 
     </main>
-    
+    <script src="script.js" defer></script>
 </body>
 </html>
