changed index page and nav menu

--- a/skills-page.html
+++ b/skills-page.html
@@ -81,7 +81,15 @@
             
 
         </div>
-
+        <footer>
+            <div class="link">
+    
+                <a class="link__tg" href="https://t.me/Wizard700" target="_blank">
+                    <span class="link__tg-item">Developed by: @Wizard700</span>
+                    <img class="link__tg-img" src="/img/tg.svg" alt="">
+                 </a>
+            </div>
+        </footer>
     </main>
     <script src="script.js" defer></script>
 </body>
