changed path to img

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </nav>
         </div>
 
-        <img class="bg" src="/img/bg.jpg" alt="">
+        <img class="bg" src="./img/bg.jpg" alt="">
 
         <section class="main__desc">
             <div class="description">Трекер навыков - это сайт, который поможет отслеживать количество часов, 
@@ -60,7 +60,7 @@
 
             <a class="link__tg" href="https://t.me/Wizard700" target="_blank">
                 <span class="link__tg-item">Developed by: @Wizard700</span>
-                <img class="link__tg-img" src="/img/tg.svg" alt="">
+                <img class="link__tg-img" src="./img/tg.svg" alt="">
              </a>
         </div>
     </footer>
