--- a/skills-page.html
+++ b/skills-page.html
@@ -39,7 +39,7 @@
                         <a href="#" class="menu-link">Статистика</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#" class="menu-link">О нас</a>
+                        <a href="./aboutus.html" class="menu-link">О нас</a>
                     </li>
                 </ul>          
             </nav>
