--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
         <div class="name-site">
             Skill time tracker
         </div>
-    </header>
-
-
-    <main class="main">
 
         <div class="container">
             <nav class="nav">
@@ -43,7 +39,10 @@
                 </ul>          
             </nav>
         </div>
+    </header>
 
+
+    <main class="main">
         <img class="bg" src="./img/bg.jpg" alt="">
 
         <section class="main__desc">
@@ -55,7 +54,7 @@
     
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="link">
 
             <a class="link__tg" href="https://t.me/Wizard700" target="_blank">
