--- a/skills-page.html
+++ b/skills-page.html
@@ -81,7 +81,7 @@
             
 
         </div>
-        <footer>
+        <footer class="footer">
             <div class="link">
     
                 <a class="link__tg" href="https://t.me/Wizard700" target="_blank">
