--- a/aboutus.html
+++ b/aboutus.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
       
 </head>
 <body>
