--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
+
       
 </head>
 <body>
@@ -69,5 +71,7 @@
         </div>
     </footer>
     <script src="./js/script.js" defer></script> 
+
+
 </body>
 </html>
