added pointing and holding a color after click in nav

--- a/skills-page.html
+++ b/skills-page.html
@@ -38,7 +38,7 @@
                         <a href="#" class="menu-link" onclick="changeHeader('Аккаунт')">Аккаунт</a>
                     </li>
                     <li class="menu-item">
-                        <a href="./skills-page.html" class="menu-link" onclick="changeHeader('Мои навыки')">Мои навыки</a>
+                        <a href="./skills-page.html" class="menu-link active" onclick="changeHeader('Мои навыки')">Мои навыки</a>
                     </li>
                     <li class="menu-item">
                         <a href="#" class="menu-link" onclick="changeHeader('Статистика')">Статистика</a>
