--- a/aboutus.html
+++ b/aboutus.html
@@ -45,7 +45,7 @@
                         <a href="#" class="menu-link" onclick="changeHeader('Статистика')">Статистика</a>
                     </li>
                     <li class="menu-item">
-                        <a href="./aboutus.html" class="menu-link" onclick="changeHeader('О нас')">О нас</a>
+                        <a href="./aboutus.html" class="menu-link active" onclick="changeHeader('О нас')">О нас</a>
                     </li>
                 </ul>          
             </nav>
