--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav class="nav">
                 <ul class="menu">
                     <li class="menu-item">
-                        <a href="index.html" class="menu-link">Главная</a>
+                        <a href="index.html" class="menu-link active">Главная</a>
                     </li>
                     <li class="menu-item">
                         <a href="#" class="menu-link" onclick="changeHeader('Аккаунт')">Аккаунт</a>
