--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             <nav class="nav">
                 <ul class="menu">
                     <li class="menu-item">
-                        <a href="index.html" class="menu-link active">Главная</a>
+                        <a href="index.html" class="menu-link active">Главная</a> <!-- active - выделенный элемент из nav текущей страницы -->
                     </li>
                     <li class="menu-item">
-                        <a href="#" class="menu-link" onclick="changeHeader('Аккаунт')">Аккаунт</a>
+                        <a href="#" class="menu-link">Аккаунт</a>
                     </li>
                     <li class="menu-item">
-                        <a href="./skills-page.html" class="menu-link" onclick="changeHeader('Мои навыки')">Мои навыки</a>
+                        <a href="./skills-page.html" class="menu-link">Мои навыки</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#" class="menu-link" onclick="changeHeader('Статистика')">Статистика</a>
+                        <a href="#" class="menu-link">Статистика</a>
                     </li>
                     <li class="menu-item">
-                        <a href="./aboutus.html" class="menu-link" onclick="changeHeader('О нас')">О нас</a>
+                        <a href="./aboutus.html" class="menu-link">О нас</a>
                     </li>
                 </ul>          
             </nav>
